Fixed issue with layout child component wrapping

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -21,3 +21,17 @@ body {
   grid-template-rows: auto 1fr auto;
   height: 100vh;
 }
+
+main {
+  padding: 2em;
+  background-image: linear-gradient(
+    360deg,
+    var(--color-one),
+    var(--color-three)
+  );
+  border-radius: 1em;
+}
+
+main + * {
+  color: var(--color-one);
+}
